yamls/5a-dbserver.yaml
kind: Pod
apiVersion: v1
metadata:
  name: db-server
  labels:
    app: db-server
spec:
    volumes:
    - name: minikube-vol
      persistentVolumeClaim:
        claimName: minikube-pvc

    restartPolicy: Always
    containers:
      - name: postgres
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: minikube-vol
        ports:
          - containerPort: 5432
            name: "port-5432"
        image: postgres:14-alpine
