yamls/6a-pgbouncer.yaml
apiVersion: v1
#  https://jmrobles.medium.com/postgres-connection-pool-on-kubernetes-in-1-minute-80b8020315ef
kind: Pod
metadata:
  labels:
    app: pgbouncer
  name: pgbouncer
spec:
  #volumes:
  #- name: subdomain-vol
  #  persistentVolumeClaim:
  #    claimName: subdomain-pvc
  containers:
  - env:
    - name: TZ
      value: "Europe/StocholEurope/Stocholmm" # Set your desired timezone
    - name: DB_HOST
      value: db-server
    - name: MAX_CLIENT_CONN
      value: '200'
    - name: DB_PASSWORD
      value: 'postgres'
    - name: DB_USER
      value: 'postgres'
    - name: POOL_MODE
      value: transaction
    - name: PGPASSWORD
      value: postgres
    - name: SERVER_RESET_QUERY
      value: DISCARD ALL
    image: edoburu/pgbouncer:1.9.0
    livenessProbe:
      exec:
       command: ["PGHOST=$PGBOUNCER_SERVICE_SERVICE_HOST","PGPASSWORD='postgres'" , "psql", "-U", "postgres" , 'pgbouncer', '-c' , 'SHOW POOLS;' ]
      initialDelaySeconds: 30
      periodSeconds: 10
    #volumeMounts:
    #  - mountPath: "/subdomain-data"
    #    name: subdomain-vol

    #lifecycle:
    #  preStop:
    #    exec:
    #      command:
    #      - /bin/sh
    #      - -c
    #      - killall -INT pgbouncer && sleep 120
    name: pgbouncer
    ports:
    - containerPort: 5432
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - all
