yamls/5b-dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-server
  labels:
    run: db-server
spec:
  #type: NodePort
  ports:
    - name: "port-5432"
      protocol: TCP
      port: 5432 
      targetPort: 5432
    #- name: "port-2049"
    #  protocol: TCP
    #  port: 2049
    #  targetPort: 2049


  selector:
    app: db-server
