yamls/6b-pgbouncer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-service
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: pgbouncer
