yamls/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sidecar # prefix for  pod names
  labels:
    app: sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  sidecar
  template:
    metadata:
      labels:
        app: sidecar
    spec:  

      volumes:
      - name: blog-subdomain-vol
        persistentVolumeClaim:
          claimName: blog-subdomain-pvc
      - name: blog-deploystatic-vol
        persistentVolumeClaim:
          claimName: blog-deploystatic-pvc

      containers:
        - name: blog
          image: 'opentaproject/openta-sidecar:latest'
          volumeMounts:
              - mountPath: "/subdomain-data"
                name: blog-subdomain-vol
              - mountPath: "/srv/openta-blog/django/blog/deploystatic"
                name: blog-deploystatic-vol
    
          imagePullPolicy: Always
          command: ["/bin/bash","-c"]
          args: 
            - cd django/blog;
              git fetch origin;
              git checkout -B simple origin/simple;
              ./db_setup ;
              python manage.py migrate;
              npx @tailwindcss/cli -i static/css/input.css -o static/css/output.css;
              python manage.py collectstatic --no-input;
              /usr/bin/supervisord -c /srv/openta-blog/django/blog/supervisord.conf 
              #python manage.py runserver

        - name: nginx
          image: 'opentaproject/openta-blog-nginx:latest'
          ports: 
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/subdomain-data"
              name: blog-subdomain-vol
            - mountPath: "/deploystatic"
              name: blog-deploystatic-vol





    
---

kind: Service
apiVersion: v1
metadata:
  name: sidecar-service
spec:
  selector:
    app: sidecar
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8080
      name: http
