yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sidecar3
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "700m"
spec:
  tls:
    - hosts:
      - '${HOSTNAME}'   #EDIR
      secretName: openta-tls-secret
  ingressClassName: public
  rules:
    - host: "${HOSTNAME}" #EDIT THIS
      http:
        paths:
          - pathType: "ImplementationSpecific"
            path: /
            backend:
              service:
                name: sidecar-service
                port:
                  number: 8000
